--- a/public/less/_admin.less
+++ b/public/less/_admin.less
@@ -71,7 +71,7 @@
 					width: 100px;
 				}
 				&:not(first-child) {
-					max-width: 0;
+					max-width: 200px;
 				}
 			}
 		}
